erDiagram
    workspace_analysis {
        uuid id PK
        uuid workspace_id FK
        text owner_uid
        text analysis_type
        text title
        text description
        text status
        jsonb input_data
        jsonb result_data
        numeric confidence_score
        text source_reference
        jsonb metadata
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    analysis_humanise {
        uuid id PK
        uuid analysis_id FK
        text original_text
        text humanised_text
        numeric humanisation_score
        jsonb change_log
        text[] suggestions
        jsonb metadata
        timestamptz created_at
    }

    analysis_textcompare {
        uuid id PK
        uuid analysis_id FK
        text text_a
        text text_b
        numeric similarity_score
        jsonb differences
        text[] common_phrases
        text[] unique_to_a
        text[] unique_to_b
        jsonb metadata
        timestamptz created_at
    }

    analysis_textidentify {
        uuid id PK
        uuid analysis_id FK
        text input_text
        text detected_language
        text detected_tone
        text[] detected_entities
        jsonb classification_results
        jsonb metadata
        timestamptz created_at
    }

    analysis_factcheck {
        uuid id PK
        uuid analysis_id FK
        text claim_text
        text verification_status
        numeric credibility_score
        jsonb evidence_sources
        text[] supporting_sources
        text[] refuting_sources
        jsonb metadata
        timestamptz created_at
    }

    workspaces ||--o{ workspace_analysis : "has"
    workspace_analysis ||--o| analysis_humanise : "contains"
    workspace_analysis ||--o| analysis_textcompare : "contains"
    workspace_analysis ||--o| analysis_textidentify : "contains"
    workspace_analysis ||--o| analysis_factcheck : "contains"
